--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - uses: arduino/actions/libraries/compile-examples@master
+            - uses: arduino/compile-sketches@main
               with:
                   fqbn: "stm32duino:STM32F1:genericSTM32F103C"
                   platforms: |
