--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
                   sketch-paths: |
                       - main
                   libraries: |
+                      - name: LoRa_STM32
                       - name: MPU6050_tockn
                       - name: MS5611
                       - name: SD
