--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
                   sketch-paths: |
                       - main
                   libraries: |
-                      - name: LoRa_STM32
+                      - source-url: "https://github.com/armtronix/arduino-LoRa-STM32/archive/refs/heads/master.zip"
                       - name: MPU6050_tockn
                       - name: MS5611
                       - name: SD
