--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
                   sketch-paths: |
                       - main
                   libraries: |
+                      - name: Queue
                       - source-url: "https://github.com/armtronix/arduino-LoRa-STM32/archive/refs/heads/master.zip"
                       - name: MPU6050_tockn
                       - name: MS5611
