--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
                   sketch-paths: |
                       - main
                   libraries: |
-                      - name: MPU6050_tockn
+                      - name: MPU6050_light
                       - name: MS5611
                       - name: Queue
                       - name: SD
